--- a/src/components/Slideshow.css
+++ b/src/components/Slideshow.css
@@ -26,3 +26,15 @@ p{
     padding-left: 0%;
     padding-right: 0%;
 }
+.indicator {
+    cursor: pointer;
+    padding: 10px;
+    text-align: center;
+    border: 1px #666 solid;
+    margin: 0;
+  }
+  
+  .indicator.active {
+    color: #fff;
+    background: #666;
+  }
